--- a/Readme.org
+++ b/Readme.org
@@ -141,6 +141,12 @@ Then blocks will be sent automatically when a traceback is detected in the respo
   (ob-python-extras-load-alerts))
 #+end_src
 
+** Matplotlib image transparency
+Matplotlib is configured to save and display transparent images by default. The
+default can be changed with ~(setq ob-python-extras/transparent-images nil)~.
+The default, in turn, can be overriden at the org-src-block level with
+=:transparent nil= or =:transparent t=.
+
 * Examples:
 [[file:tests/babel-formatting.org][See this org file for examples of the different functionality and configurations.]]
 
