--- a/tests/golden/babel-formatting.org
+++ b/tests/golden/babel-formatting.org
@@ -5,24 +5,27 @@
 :header-args: :results output drawer :tangle :session timer_formatting_tests
 :END:
 
+#+name: testing_sessions_set_variable
 #+begin_src python
 x = 1
 #+end_src
 
-#+RESULTS:
+#+RESULTS: testing_sessions_set_variable
 :results:
 Cell Timer: 0:00:00
 :end:
 
+#+name: testing_sessions_print
 #+begin_src python
-print(x)
+print(x*2)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: testing_sessions_print
 :results:
-1
+2
 Cell Timer: 0:00:00
 :end:
+
 
 * Timer formatting
 :PROPERTIES:
@@ -31,13 +34,14 @@ Cell Timer: 0:00:00
 
 Rounds by default, and shows by default:
 
+#+name: timer
 #+begin_src python
 print(1)
 import time
 time.sleep(3)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: timer
 :results:
 1
 Cell Timer: 0:00:03
@@ -45,11 +49,12 @@ Cell Timer: 0:00:03
 
 Turn off timer-show to hide it
 
+#+name: turn_off_timer
 #+begin_src python :timer-show no
 print(1)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: turn_off_timer
 :results:
 1
 :end:
@@ -57,14 +62,15 @@ print(1)
 Set :timer-rounded to no to get the full timer.
 (Also modifying the timer string here so that my expect tests will skip it.)
 
+#+name: not_rounded_timer
 #+begin_src python :timer-rounded no :timer-string %expect_skip Cell Timer:
 print(1)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: not_rounded_timer
 :results:
 1
-%expect_skip Cell Timer: 0:00:00.000102
+%expect_skip Cell Timer: 0:00:00.000137
 :end:
 
 * Table formatting
@@ -74,6 +80,7 @@ print(1)
 
 Dataframes are printed as org tables
 
+#+name: print_table
 #+begin_src python :results drawer
 import pandas as pd
 data = {
@@ -85,7 +92,7 @@ df = pd.DataFrame(data)
 print(df)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: print_table
 :results:
 | idx | Name    | Age | City          |    Score |
 |-----+---------+-----+---------------+----------|
@@ -97,13 +104,15 @@ print(df)
 :end:
 
 
+
 To not print the index as idx, set something else as to be the index.
 
+#+name: change_table_index
 #+begin_src python
 print(df.set_index("Name"))
 #+end_src
 
-#+RESULTS:
+#+RESULTS: change_table_index
 :results:
 | Name    | Age | City          |    Score |
 |---------+-----+---------------+----------|
@@ -114,16 +123,18 @@ print(df.set_index("Name"))
 | Eva     |  22 | Tokyo         | 90.11111 |
 :end:
 
+
 This respects various pandas options:
 *** Float formatting
 
 
+#+name: format_table_floats
 #+begin_src python
 pd.options.display.float_format = '{:.1f}'.format
 print(df.set_index("Name"))
 #+end_src
 
-#+RESULTS:
+#+RESULTS: format_table_floats
 :results:
 | Name    | Age | City          | Score |
 |---------+-----+---------------+-------|
@@ -135,13 +146,15 @@ print(df.set_index("Name"))
 :end:
 
 *** Max rows
+
+#+name: limit_table_max_rows
 #+begin_src python
 pd.options.display.max_rows = 10
 long_df = pd.DataFrame({'A': range(200)})
 print(long_df)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: limit_table_max_rows
 :results:
 | idx | A |
 |-----+---|
@@ -164,13 +177,14 @@ print(long_df)
 
 print_org_df sets max_rows to be 20 by default to avoid this issue.
 
+#+name: print_long_table
 #+begin_src python :tables-auto-align no
 import pandas as pd
-long_df = pd.DataFrame({'A': range(200)})
+long_df = pd.DataFrame({'A': range(400)})
 print(long_df)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: print_long_table
 :results:
 | idx |  A |
 |-----+----|
@@ -198,87 +212,229 @@ print(long_df)
 
 If we make the max_rows even modestly large, we run into it, depending on computing resources.
 
+#+name: print_medium_table
 #+begin_src python :tables-auto-align no
-pd.options.display.max_rows = 60
-long_df = pd.DataFrame({'A': range(60)})
+pd.options.display.max_rows = 200
+long_df = pd.DataFrame({'A': range(200)})
 print(long_df)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: print_medium_table
 :results:
-| idx |  A |
-|-----+----|
-|   0 |  0 |
-|   1 |  1 |
-|   2 |  2 |
-|   3 |  3 |
-|   4 |  4 |
-|   5 |  5 |
-|   6 |  6 |
-|   7 |  7 |
-|   8 |  8 |
-|   9 |  9 |
-|  10 | 10 |
-|  11 | 11 |
-|  12 | 12 |
-|  13 | 13 |
-|  14 | 14 |
-|  15 | 15 |
-|  16 | 16 |
-|  17 | 17 |
-|  18 | 18 |
-|  19 | 19 |
-|  20 | 20 |
-|  21 | 21 |
-|  22 | 22 |
-|  23 | 23 |
-|  24 | 24 |
-|  25 | 25 |
-|  26 | 26 |
-|  27 | 27 |
-|  28 | 28 |
-|  29 | 29 |
-|  30 | 30 |
-|  31 | 31 |
-|  32 | 32 |
-|  33 | 33 |
-|  34 | 34 |
-|  35 | 35 |
-|  36 | 36 |
-|  37 | 37 |
-|  38 | 38 |
-|  39 | 39 |
-|  40 | 40 |
-|  41 | 41 |
-|  42 | 42 |
-|  43 | 43 |
-|  44 | 44 |
-|  45 | 45 |
-|  46 | 46 |
-|  47 | 47 |
-|  48 | 48 |
-|  49 | 49 |
-|  50 | 50 |
-|  51 | 51 |
-|  52 | 52 |
-|  53 | 53 |
-|  54 | 54 |
-|  55 | 55 |
-|  56 | 56 |
-|  57 | 57 |
-|  58 | 58 |
-|  59 | 59 |
+| idx |   A |
+|-----+-----|
+|   0 |   0 |
+|   1 |   1 |
+|   2 |   2 |
+|   3 |   3 |
+|   4 |   4 |
+|   5 |   5 |
+|   6 |   6 |
+|   7 |   7 |
+|   8 |   8 |
+|   9 |   9 |
+|  10 |  10 |
+|  11 |  11 |
+|  12 |  12 |
+|  13 |  13 |
+|  14 |  14 |
+|  15 |  15 |
+|  16 |  16 |
+|  17 |  17 |
+|  18 |  18 |
+|  19 |  19 |
+|  20 |  20 |
+|  21 |  21 |
+|  22 |  22 |
+|  23 |  23 |
+|  24 |  24 |
+|  25 |  25 |
+|  26 |  26 |
+|  27 |  27 |
+|  28 |  28 |
+|  29 |  29 |
+|  30 |  30 |
+|  31 |  31 |
+|  32 |  32 |
+|  33 |  33 |
+|  34 |  34 |
+|  35 |  35 |
+|  36 |  36 |
+|  37 |  37 |
+|  38 |  38 |
+|  39 |  39 |
+|  40 |  40 |
+|  41 |  41 |
+|  42 |  42 |
+|  43 |  43 |
+|  44 |  44 |
+|  45 |  45 |
+|  46 |  46 |
+|  47 |  47 |
+|  48 |  48 |
+|  49 |  49 |
+|  50 |  50 |
+|  51 |  51 |
+|  52 |  52 |
+|  53 |  53 |
+|  54 |  54 |
+|  55 |  55 |
+|  56 |  56 |
+|  57 |  57 |
+|  58 |  58 |
+|  59 |  59 |
+|  60 |  60 |
+|  61 |  61 |
+|  62 |  62 |
+|  63 |  63 |
+|  64 |  64 |
+|  65 |  65 |
+|  66 |  66 |
+|  67 |  67 |
+|  68 |  68 |
+|  69 |  69 |
+|  70 |  70 |
+|  71 |  71 |
+|  72 |  72 |
+|  73 |  73 |
+|  74 |  74 |
+|  75 |  75 |
+|  76 |  76 |
+|  77 |  77 |
+|  78 |  78 |
+|  79 |  79 |
+|  80 |  80 |
+|  81 |  81 |
+|  82 |  82 |
+|  83 |  83 |
+|  84 |  84 |
+|  85 |  85 |
+|  86 |  86 |
+|  87 |  87 |
+|  88 |  88 |
+|  89 |  89 |
+|  90 |  90 |
+|  91 |  91 |
+|  92 |  92 |
+|  93 |  93 |
+|  94 |  94 |
+|  95 |  95 |
+|  96 |  96 |
+|  97 |  97 |
+|  98 |  98 |
+|  99 |  99 |
+| 100 | 100 |
+| 101 | 101 |
+| 102 | 102 |
+| 103 | 103 |
+| 104 | 104 |
+| 105 | 105 |
+| 106 | 106 |
+| 107 | 107 |
+| 108 | 108 |
+| 109 | 109 |
+| 110 | 110 |
+| 111 | 111 |
+| 112 | 112 |
+| 113 | 113 |
+| 114 | 114 |
+| 115 | 115 |
+| 116 | 116 |
+| 117 | 117 |
+| 118 | 118 |
+| 119 | 119 |
+| 120 | 120 |
+| 121 | 121 |
+| 122 | 122 |
+| 123 | 123 |
+| 124 | 124 |
+| 125 | 125 |
+| 126 | 126 |
+| 127 | 127 |
+| 128 | 128 |
+| 129 | 129 |
+| 130 | 130 |
+| 131 | 131 |
+| 132 | 132 |
+| 133 | 133 |
+| 134 | 134 |
+| 135 | 135 |
+| 136 | 136 |
+| 137 | 137 |
+| 138 | 138 |
+| 139 | 139 |
+| 140 | 140 |
+| 141 | 141 |
+| 142 | 142 |
+| 143 | 143 |
+| 144 | 144 |
+| 145 | 145 |
+| 146 | 146 |
+| 147 | 147 |
+| 148 | 148 |
+| 149 | 149 |
+| 150 | 150 |
+| 151 | 151 |
+| 152 | 152 |
+| 153 | 153 |
+| 154 | 154 |
+| 155 | 155 |
+| 156 | 156 |
+| 157 | 157 |
+| 158 | 158 |
+| 159 | 159 |
+| 160 | 160 |
+| 161 | 161 |
+| 162 | 162 |
+| 163 | 163 |
+| 164 | 164 |
+| 165 | 165 |
+| 166 | 166 |
+| 167 | 167 |
+| 168 | 168 |
+| 169 | 169 |
+| 170 | 170 |
+| 171 | 171 |
+| 172 | 172 |
+| 173 | 173 |
+| 174 | 174 |
+| 175 | 175 |
+| 176 | 176 |
+| 177 | 177 |
+| 178 | 178 |
+| 179 | 179 |
+| 180 | 180 |
+| 181 | 181 |
+| 182 | 182 |
+| 183 | 183 |
+| 184 | 184 |
+| 185 | 185 |
+| 186 | 186 |
+| 187 | 187 |
+| 188 | 188 |
+| 189 | 189 |
+| 190 | 190 |
+| 191 | 191 |
+| 192 | 192 |
+| 193 | 193 |
+| 194 | 194 |
+| 195 | 195 |
+| 196 | 196 |
+| 197 | 197 |
+| 198 | 198 |
+| 199 | 199 |
 :end:
 
 ** Printing multiple dataframes:
 
+#+name: printing_multiple_dataframes
 #+begin_src python
 print(df)
 print("Space between dataframes")
 print(df)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: printing_multiple_dataframes
 :results:
 | idx | Name    | Age | City          | Score |
 |-----+---------+-----+---------------+-------|
@@ -297,16 +453,18 @@ Space between dataframes
 |   4 | Eva     |  22 | Tokyo         |  90.1 |
 :end:
 
-In general space between dataframes requires ones below to be aligned.
-I have advise ( adjust-org-babel-results ) that does this, but it can be slow if there are many tables in the org file, so it can be disabled like this.
 
+In general space between dataframes requires ones below to be aligned.
+I have an advise function ( adjust-org-babel-results ) that does this, but it can be slow if there are many tables in the org file, so it can be disabled like this.
+
+#+name: tables_auto_align_off
 #+begin_src python :tables-auto-align no
 print(df)
 print("Space between dataframes")
 print(df)
 #+end_src
 
-#+RESULTS:
+#+RESULTS: tables_auto_align_off
 :results:
 | idx | Name    | Age | City          | Score |
 |-----+---------+-----+---------------+-------|
@@ -325,6 +483,7 @@ Space between dataframes
 | 4|Eva|22|Tokyo|90.1 |
 :end:
 
+
 * Testing Tabulate
 :PROPERTIES:
 :header-args: :results output drawer :python "nix-shell shell_with_tabulate.nix --run python"  :tangle :session test_tabulate :timer-show no
@@ -332,6 +491,7 @@ Space between dataframes
 
 If Tabulate is available we can use it directly to formate the dataframe. This is built into pandas and the safer option.
 
+#+name print_with_tabulate
 #+begin_src python :results drawer
 import pandas as pd
 data = {
@@ -361,30 +521,31 @@ print(df)
 
 mocks out python plotting to allow plots to be interspersed with printing, and allows multiple to be made. :)
 
+#+name: table_with_plot_and_text
 #+begin_src python :results drawer
 import pandas as pd
 import matplotlib.pyplot as plt
 print("look!")
-df = pd.DataFrame({"x": [1, 2, 3, 4, 5,6,7,], "y": [10, 11, 12, 13, 14,15,16]})
+df = pd.DataFrame({"x": [0, 2, 3, 4, 5,6,7,], "y": [10, 11, 12, 13, 14,15,16]})
 print(df)
 df.plot(x="x", y="y", kind="line")
 plt.show()
 print("tada!")
 #+end_src
 
-#+RESULTS:
+#+RESULTS: table_with_plot_and_text
 :results:
 look!
 | idx | x |  y |
 |-----+---+----|
-|   0 | 1 | 10 |
+|   0 | 0 | 10 |
 |   1 | 2 | 11 |
 |   2 | 3 | 12 |
 |   3 | 4 | 13 |
 |   4 | 5 | 14 |
 |   5 | 6 | 15 |
 |   6 | 7 | 16 |
-[[file:plots/babel-formatting/plot_20250101_112946_7965532.png]]
+[[file:plots/babel-formatting/plot_20250103_170041_9382229.png]]
 tada!
 :end:
 
