--- a/Readme.org
+++ b/Readme.org
@@ -142,10 +142,11 @@ Then blocks will be sent automatically when a traceback is detected in the respo
 #+end_src
 
 ** Matplotlib image transparency
-Matplotlib is configured to save and display transparent images by default. The
-default can be changed with ~(setq ob-python-extras/transparent-images nil)~.
-The default, in turn, can be overridden at the org-src-block level with
-=:transparent nil= or =:transparent t=.
+Matplotlib is configured to save and display images without transparency by
+default. The default can be changed with ~(setq
+ob-python-extras/transparent-images t)~. This default, in turn, can be
+overridden at the org-src-block level with =:transparent nil= or =:transparent
+t=.
 
 * Examples:
 [[file:tests/babel-formatting.org][See this org file for examples of the different functionality and configurations.]]
