--- a/Readme.org
+++ b/Readme.org
@@ -63,8 +63,25 @@ These commands are intended to be called from dired buffers.
 
 
 Also includes a git precommit hook that's useful for automatically converting org to ipynb.
+** Super jank "LSP" feautres:
+
+- ob-python-extras/python-help-clean
+
+This calls the python REPL's help on the python thing at point. The defaults bind it to K (lookup/documentation)
+
+- ob-python-extras/goto-definition
+
+  Similarly, this uses pythons inspect to find the path for the object at point, then travels there. Default bound to gd.
+
+These both rely on the following mechanism to execute the help and inspect functionality, which is what makes them jank:
+
+  - visually selects to the end of a (vim) word, and then selects backwards through "_" and "." . I think a better implementation of this would interace with eglot and pyright to capture the proper python thing at point, instead of this adhoc implementation.
+  - puts a source block immediately below the current on in the original org file, runs it, capturing the output, and then cleans this up. Ideally it would call whatever functions execute org babel blocks under the hood.
+
+
 
 ** Better LSP integration
+
 - Special mode inherits the same python interpreter as specified for the cell, giving access to documentation and completion. (Requires eglot.)
   Activate with
 
