--- a/Readme.org
+++ b/Readme.org
@@ -63,32 +63,27 @@ These commands are intended to be called from dired buffers.
 
 
 Also includes a git precommit hook that's useful for automatically converting org to ipynb.
-** Super jank "LSP" feautres:
+** Bare bones LSP features
 
 - ob-python-extras/python-help-clean
 
-This calls the python REPL's help on the python thing at point. The defaults bind it to K (lookup/documentation)
+This calls the python REPL's help on the current symbol (obtained from (python-info-current-symbol)). The defaults bind it to K (lookup/documentation)
 
 - ob-python-extras/goto-definition
 
   Similarly, this uses pythons inspect to find the path for the object at point, then travels there. Default bound to gd.
 
-These both rely on the following mechanism to execute the help and inspect functionality, which is what makes them jank:
-
-  - visually selects to the end of a (vim) word, and then selects backwards through "_" and "." . I think a better implementation of this would interace with eglot and pyright to capture the proper python thing at point, instead of this adhoc implementation.
-  - puts a source block immediately below the current on in the original org file, runs it, capturing the output, and then cleans this up. Ideally it would call whatever functions execute org babel blocks under the hood.
-
 - Completion at point
   Gets completion at point via the python process corresponding to a cell, and feeds them into capf. (This one isn't that janky.)
 
-** Variable Renamer
+** Variable Renamer Utility
 Tooling to safely rename variables in an org file across all python blocks that have valid python syntax. (python blocks with invalid syntax will be skipped.)
 
-To use, create a renamer.json in the same folder as your .org file, mark both, and then run ob-python-extras/dired-rename-python-vars.
+To use, create a renamer.json in the same folder as your .org file, mark both with dired, and then run ob-python-extras/dired-rename-python-vars.
 
 By default this runs a python via "nix-shell --pure -p black --run 'python ...'" , set the variable alternative-python-binary to a different python binary if not using nix.
 
-** Better LSP integration
+** Eglot integration in org edit special
 
 - Special mode inherits the same python interpreter as specified for the cell, giving access to documentation and completion. (Requires eglot.)
   Activate with
